--- a/public/frontend/style.css
+++ b/public/frontend/style.css
@@ -1,5 +1,46 @@
 @import url('https://fonts.googleapis.com/css2?family=Winky+Sans:ital,wght@0,300..900;1,300..900&display=swap');
 
+
+:root {
+    --primary-color: #d91c1c;
+    --secondary-color: #e4e443;
+    --text-color: #504949;
+}
 body {
     font-family: "Winky Sans", sans-serif;
+    color: var(--text-color);
+}
+
+.container {
+    width: 86%;
+    margin: 0 auto;
+}
+
+button {
+    cursor: pointer;
+}
+.text-primary {
+    color: var(--primary-color);
+}
+.text-secondary {
+    color: var(--secondary-color);
+}
+
+.bg-primary {
+    background-color: var(--primary-color);
+}
+.bg-secondary {
+    background-color: var(--secondary-color);
+}
+.btn-primary {
+    background-color: var(--primary-color);
+    color: #ffffff;
+    padding: 10px 20px;
+    border-radius: 6px;
+}
+.btn-secondary {
+    background-color: var(--secondary-color);
+    color: #ffffff;
+    padding: 10px 20px;
+    border-radius: 6px;
 }
